[package]
name = "async-dup"
# When publishing a new version:
# - Update CHANGELOG.md
# - Create "v1.x.y" git tag
version = "1.2.4"
authors = ["Stjepan Glavina <stjepang@gmail.com>"]
edition = "2021"
rust-version = "1.60"
description = "Duplicate an async I/O handle"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/smol-rs/async-dup"
homepage = "https://github.com/smol-rs/async-dup"
documentation = "https://docs.rs/async-dup"
keywords = ["asynchronous", "duplicate", "clone", "split", "share"]
categories = ["asynchronous", "concurrency"]
exclude = ["/.*"]

[dependencies]
async-lock = "3.1.0"
futures-io = "0.3.5"

[dev-dependencies]
futures = { version = "0.3.5", default-features = false, features = ["std"] }
smol = "2"
